# PictureARAndroid

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/it/signoretto/marco/opencv_test/: ExampleInstrumentedTest.java
app/src/androidTest/java/it/signoretto/marco/picturear/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Matcher.cpp  Matcher.h  boundary.cpp  boundary.h  boundary_extractor.cpp  boundary_extractor.h  marker.cpp  marker.h  native-lib.cpp  utils.cpp  utils.h
app/src/main/java/it/signoretto/marco/opencv_test/: MainActivity.java  PictureAR.java
app/src/main/java/it/signoretto/marco/picturear/: MainActivity.java  PictureAR.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/it/signoretto/marco/opencv_test/: ExampleUnitTest.java
app/src/test/java/it/signoretto/marco/picturear/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary331/: build.gradle
